static/css/swizzin.css
a[post=true] {
  cursor: pointer;
}
.table {
  table-layout: fixed;
}

.table-condensed > thead > tr > td,
.table-condensed > tbody > tr > td,
.table-condensed > tfoot > tr > td {
  padding: 2px;
  font-size: 16px
}

.table-condensed > thead > tr > th,
.table-condensed > tbody > tr > th,
.table-condensed > tfoot > tr > th {
  padding:3px;
  font-size:18px;
}

.indicator {
  font-size: 9px;
  cursor: default;
  height: 10px;
  width: 10px;
  display: inline-block;
  border-radius: 50%;
  margin-right: 5px
}

.systemindicator {
  font-size: 9px;
  cursor: default;
  height: 25px;
  width: 25px;
  display: inline-block;
  border-radius: 50%;
  margin-right: 5px
}

.logo {
  width: 15rem;
  padding: 15px;
}

a.grayscale img {
  filter: saturate(25%);
}

a.grayscale:hover img {
  filter: saturate(80%);
}

.app-icon {
  vertical-align: center;
  width: 28px;
  padding-right: 5px;
}

.toggle.btn-xs {
  min-width: 3.7rem;
}
.toggle-on.btn-xs {
  padding-right: .4rem;
}

.toggle-off.btn-xs {
  padding-left: .4rem;
}

/*.btn-group-xs > .btn, .btn-xs {
  padding: .25rem .4rem;
  font-size: .875rem;
  line-height: .5;
  border-radius: .2rem;
}*/

/*.btn-xs,
.btn-group-xs > .btn {
    padding: 1px 5px;
    font-size: 12px;
    line-height: 1.5;
    border-radius: 3px;
}*/

body {
  overflow-x: hidden;
}

#sidebar-wrapper {
  min-height: 100vh;
  margin-left: -15rem;
  -webkit-transition: margin .25s ease-out;
  -moz-transition: margin .25s ease-out;
  -o-transition: margin .25s ease-out;
  transition: margin .25s ease-out;
}

#sidebar-wrapper .sidebar-heading {
  width: 15rem;
  font-size: 1.2rem;
}

#sidebar-wrapper .list-group {
}

#page-content-wrapper {
  min-width: 100vw;
}

#wrapper.toggled #sidebar-wrapper {
  margin-left: 0;
}

@media (min-width: 768px) {
#sidebar-wrapper {
  margin-left: 0;
}

#page-content-wrapper {
  min-width: 0;
  width: 100%;
}

#wrapper.toggled #sidebar-wrapper {
  margin-left: -15rem;
}
}

@media (min-width: 576px) {
  .card-columns {
      column-count: 1;
  }
}

@media (min-width: 768px) {
  .card-columns {
      column-count: 2;
  }
}

@media (min-width: 992px) {
  .card-columns {    
      column-count: 2;
  }
}

@media (min-width: 1400px) {
  .card-columns {    
      column-count: 3;
  }
}

